# OmniDrive

./: .env.example  .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: deploy-pages.yml  release-desktop.yml
Website/: index.html  styles.css
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_registry.rs  app_session.rs  drive_api.rs  drive_collaboration.rs  drive_mutations.rs  drive_preview.rs  local_index.rs  main.rs  oauth.rs  photos_api.rs  supabase_oauth.rs  token_store.rs
src-tauri/windows/: English.nsh
src/components/: DriveGrid.tsx  DriveSidebar.tsx  DriveTable.tsx  DriveThumbnail.tsx  FileExplorer.tsx  FilePreview.tsx  WindowTitleBar.tsx
src/domain/: appRoute.test.ts  appRoute.ts  browseModel.test.ts  browseModel.ts  browsePresentation.test.ts  browsePresentation.ts  dragPresentation.test.ts  dragPresentation.ts  driveView.test.ts  driveView.ts  duplicateCleanup.test.ts  duplicateCleanup.ts  explorerTree.test.ts  explorerTree.ts  fileMetadata.test.ts  fileMetadata.ts  gridPresentation.test.ts  gridPresentation.ts  gridThumbnails.test.ts  gridThumbnails.ts  normalize.test.ts  normalize.ts  routing.test.ts  routing.ts  storageInsights.test.ts  storageInsights.ts  transferModel.test.ts  transferModel.ts  types.ts
src/lib/: authClient.test.ts  authClient.ts  authValidation.test.ts  authValidation.ts  cloudAccounts.test.ts  (+6 more)
(+1 files in other folders)
