[package]
name = "omnidrive"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.5.3"
tauri-plugin-opener = "2.5.3"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
url = "2.5"
dotenvy = "0.15"
mime_guess = "2.0"
calamine = "0.34"
quick-xml = "0.38"
zip = "2.4"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native-sync-persistent", "crypto-rust"] }
